--- a/Changelog
+++ b/Changelog
@@ -412,3 +412,6 @@ V 0.0.0.708.1B
 1: LCD display is now real time instead of only updateing when wifi is active
 2: Minor improvments
 
+01/31/2019
+V 0.0.0.709
+1: Fixed millis rollover in ToggleLcd. Still need to cleanup togglelcd and checkdistance
